# goodgibbon

./: Makefile  Makefile.am  Makefile.in  NEWS  README-alpha  README.libsvg  README.md  ]  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  download_uri  download_uri.in  gcreate_class.pl  gcreate_class.pl.in  gibbon-geo-ip-data.h.tmpl  libtool
data/: Makefile  Makefile.am  Makefile.in  bg.gibbon.gschema.xml  gibbon-convert.1  gibbon-convert.1.in  gibbon.1  gibbon.desktop
gibbon-0.2.0/: AUTHORS  ChangeLog  README  README.libsvg-cairo  TODO  config.h.in  configure  configure.ac  gibbon-geo-ip-data.h
gibbon-0.2.0/data/: bg.gibbon.gschema.xml.in  gibbon.1.in  gibbon.desktop.in  gibbon.ui
gibbon-0.2.0/docs/: Makefile.am  Makefile.in
gibbon-0.2.0/libgsgf/: gsgf-color.c  gsgf-color.h  gsgf-component.c  gsgf-component.h  gsgf-compose.h  gsgf-date.c  gsgf-date.h  gsgf-empty.c  gsgf-empty.h  gsgf-error.c  gsgf-error.h  gsgf-flavor.h  gsgf-list-of.c  gsgf-list-of.h  gsgf-move-backgammon.c  gsgf-move.h  gsgf-node.c  gsgf-node.h  gsgf-point-backgammon.h  gsgf-point.c  gsgf-private.h  gsgf-property.h  gsgf-raw.c  gsgf-real.c  gsgf-real.h  gsgf-result.h  gsgf-stone-backgammon.c  gsgf-stone.c  gsgf-stone.h  gsgf-util.c  gsgf-util.h
gibbon-0.2.0/libsvg/: Makefile.am  svg.c  svg.h  svg_attribute.c  svg_element.c  svg_group.c  svg_image.c  svg_parser.c  svg_text.c  svgint.h
gibbon-0.2.0/libsvg-cairo/: Makefile.in  svg-cairo-internal.h
gibbon-0.2.0/pixmaps/: Makefile.in
gibbon-0.2.0/po/: LINGUAS  POTFILES.in  bg.po  de.po
gibbon-0.2.0/src/: 7point.gmd  7point.sgf  dance-complete0.gmd  drop-white-complete.gmd  drop-white-incomplete.gmd  edited.gmd  edited.sgf  gibbon-accept.c  gibbon-accept.h  gibbon-analysis-move.h  gibbon-analysis-roll.c  gibbon-analysis-roll.h  gibbon-analysis-view.h  gibbon-app.c  gibbon-app.h  gibbon-archive.h  gibbon-board.c  gibbon-board.h  gibbon-cairoboard.h  gibbon-chat-view.h  gibbon-chat.c  gibbon-chat.h  gibbon-clip-lexer.c  gibbon-clip-lexer.l  gibbon-clip-reader-priv.h  gibbon-connection.c  gibbon-connection.h  gibbon-country.h  gibbon-database.c  gibbon-database.h  gibbon-double.c  gibbon-fibs-command.h  gibbon-fibs-message.c  gibbon-game-action.c  gibbon-game-action.h  gibbon-game-chat.h  gibbon-geo-ip-updater.c  gibbon-gmd-parser.y  gibbon-help.c  gibbon-inviter-list-view.c  (+70 more)
help/: Makefile  Makefile.am  Makefile.in
help/C/: board-toolbar.page  bugreports.page  cannot-invite.page  chat-area.page  chatting.page  checker-movement.page  clip-conformance.page  connect.page  contributing.page  create-account.page  doubling.page  droppers.page  fibs-cheat.page  game-chat-concept.page  geo-ip.page  gibbon-unicode.page  gmd-description.page  gui-overview.page  gui.page  index.page  info-area.page  introduction.page  invite.page  inviters-list.page  kibitz.page  libgsgf.page  main-menu.page  main-toolbar.page  playing.page  rating.page  reliability.page  resigning.page  rolling-dice.page  say.page  server-console.page  shout.page  social-networks.page  supporting-gibbon.page  swapping-dice.page  tell.page  (+3 more)
help/de/: board-toolbar.page  bugreports.page  cannot-invite.page  chat-area.page  chatting.page  checker-movement.page  clip-conformance.page  connect.page  contributing.page  create-account.page  de.mo  de.po  doubling.page  droppers.page  fibs-cheat.page  game-chat-concept.page  geo-ip.page  gibbon-unicode.page  gmd-description.page  gui-overview.page  gui.page  index.page  info-area.page  introduction.page  invite.page  inviters-list.page  kibitz.page  libgsgf.page  main-menu.page  main-toolbar.page  playing.page  rating.page  reliability.page  resigning.page  rolling-dice.page  say.page  server-console.page  shout.page  social-networks.page  supporting-gibbon.page  (+5 more)
libgsgf/: Makefile  Makefile.am  Makefile.in  gsgf-collection.c  gsgf-collection.h  gsgf-compose.c  gsgf-cooked-value.c  gsgf-cooked-value.h  gsgf-double.c  gsgf-double.h  gsgf-flavor-backgammon.c  gsgf-flavor-backgammon.h  gsgf-flavor-protected.h  gsgf-flavor.c  gsgf-game-tree.c  gsgf-game-tree.h  gsgf-move-backgammon.h  gsgf-move.c  gsgf-number.c  gsgf-number.h  gsgf-point-backgammon.c  gsgf-point.h  gsgf-property.c  gsgf-raw.h  gsgf-result.c  gsgf-simple-text.c  gsgf-simple-text.h  gsgf-stone-backgammon.h  gsgf-text.c  gsgf-text.h  gsgf-value.c  gsgf-value.h  gsgf.h  libgsgf.c
libgsgf/.deps/: gsgf-collection.Po  gsgf-color.Po  gsgf-component.Po  gsgf-compose.Po  gsgf-cooked-value.Po  gsgf-date.Po  gsgf-double.Po  gsgf-empty.Po  gsgf-error.Po  gsgf-flavor-backgammon.Po  gsgf-flavor.Po  gsgf-game-tree.Po  gsgf-list-of.Po  gsgf-move-backgammon.Po  gsgf-move.Po  gsgf-node.Po  gsgf-number.Po  gsgf-point-backgammon.Po  gsgf-point.Po  gsgf-property.Po  gsgf-raw.Po  gsgf-real.Po  gsgf-result.Po  gsgf-simple-text.Po  gsgf-stone-backgammon.Po  gsgf-stone.Po  gsgf-text.Po  gsgf-util.Po  gsgf-value.Po  libgsgf.Po
libgsgf/examples/: Makefile  Makefile.am  Makefile.in  gsgf_list_bg  gsgf_list_bg.c
libgsgf/tests/: Makefile  Makefile.am  Makefile.in  compressed-list.sgf  compressed-list.sgf.in  cp1251.sgf  full.sgf  full.sgf.in  gsgf-write-back  main.c  misc-properties.sgf  move-annotation.sgf  (+27 more)
libsvg-cairo/: Makefile  Makefile.am  svg-cairo.h  svg_cairo.c  svg_cairo_sprintf_alloc.c  svg_cairo_state.c
src/: 7point.mat  7point.match  Makefile  Makefile.am  Makefile.in  dance-complete1.gmd  dance-complete2.gmd  dance-incomplete.gmd  drop-black-incomplete.gmd  gibbon  gibbon-analysis-move.c  gibbon-analysis-view.c  gibbon-analysis.c  gibbon-analysis.h  gibbon-app.c  gibbon-app.h  gibbon-archive.c  gibbon-cairoboard.c  gibbon-chat-view.c  gibbon-client-icons.c  gibbon-client-icons.h  gibbon-clip-reader.c  gibbon-clip-reader.h  gibbon-connection-dialog.c  gibbon-connection-dialog.h  gibbon-convert  gibbon-convert.c  gibbon-country.c  gibbon-double.h  gibbon-drop.c  gibbon-drop.h  gibbon-fibs-command.c  gibbon-fibs-message.h  gibbon-game-actions.h  gibbon-game-chat.c  gibbon-game-list-view.c  gibbon-game-list-view.h  gibbon-game.c  gibbon-game.h  gibbon-geo-ip-updater.h  (+87 more)
(+283 files in other folders)
