# This file is part of Gibbon, a graphical frontend to the First Internet 
# Backgammon Server FIBS.
# Copyright (C) 2009-2012 Guido Flohr, http://guido-flohr.net/.
#
# Gibbon is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Gibbon is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Gibbon.  If not, see <http://www.gnu.org/licenses/>.

# BEFORE YELP_HELP_RULES
@YELP_HELP_RULES@
# AFTER YELP_HELP_RULES

HELP_ID = gibbon

HELP_MEDIA = \
	figures/board-cup.png \
	figures/board-dice.png \
	figures/board-her-cube.png \
	figures/board-my-cube.png \
	figures/board-toolbar.png \
	figures/chat-area.png \
	figures/connection-dialog.png \
	figures/game-chat.png \
	figures/gibbon-logo.png \
	figures/inviters-list.png \
	figures/main-toolbar-connected.png \
	figures/main-toolbar-disconnected.png \
	figures/overview-board-toolbar.png \
	figures/overview-board.png \
	figures/overview-chat-area.png \
	figures/overview-game-chat-area.png \
	figures/overview-info-area.png \
	figures/overview-inviters-list.png \
	figures/overview-main-menu.png \
	figures/overview-main-toolbar.png \
	figures/overview-status-bar.png \
	figures/overview.png \
	figures/players-list.png \
	figures/register-account.png \
	figures/say.png \
	figures/server-console.png \
	figures/whisper.png

# FIXME! Add legal.xml here.
HELP_FILES = \
	board-toolbar.page \
	bugreports.page \
	cannot-invite.page \
	chat-area.page \
	chatting.page \
	checker-movement.page \
	clip-conformance.page \
	connect.page \
	contributing.page \
	create-account.page \
	doubling.page \
	droppers.page \
	fibs-cheat.page \
	game-chat-concept.page \
	geo-ip.page \
	gibbon-unicode.page \
	gmd-description.page \
	gui.page \
	gui-overview.page \
	index.page \
	info-area.page \
	introduction.page \
	invite.page \
	inviters-list.page \
	kibitz.page \
	libgsgf.page \
	main-menu.page \
	main-toolbar.page \
	playing.page \
	rating.page \
	reliability.page \
	resigning.page \
	rolling-dice.page \
	say.page \
	server-console.page \
	shout.page \
	social-networks.page \
	supporting-gibbon.page \
	swapping-dice.page \
	tell.page \
	unlimited-matches.page \
	watching.page \
	whisper.page

HELP_LINGUAS = de
